deployment/function-deployment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-deployment
  labels:
    app: function-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: function-deployment
  template:
    metadata:
      labels:
        app: function-deployment
    spec:
      serviceAccountName: function-deployment-sa
      containers:
        - name: function-deployment
          image: alirezadehghannayeri/function-deployment:latest  # Replace with your Docker image name
          imagePullPolicy: Always  # Use "IfNotPresent" if pulling from a registry
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
