deployment/function-preparation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-preparation
  labels:
    app: function-preparation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: function-preparation
  template:
    metadata:
      labels:
        app: function-preparation
    spec:
      containers:
        - name: function-preparation
          image: alirezadehghannayeri/function-preparation:latest  # Replace with your Docker image name
          imagePullPolicy: IfNotPresent  # Use "IfNotPresent" if pulling from a registry
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
