deployment/function-registration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-registration
  labels:
    app: function-registration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: function-registration
  template:
    metadata:
      labels:
        app: function-registration
    spec:
      containers:
        - name: function-registration
          image: alirezadehghannayeri/function-registration:latest  # Replace with your Docker image name
          imagePullPolicy: IfNotPresent  # Use "IfNotPresent" if pulling from a registry
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
