deployment/function-state-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-state
  labels:
    app: function-state
spec:
  replicas: 1
  selector:
    matchLabels:
      app: function-state
  template:
    metadata:
      labels:
        app: function-state
    spec:
      containers:
        - name: function-state
          image: alirezadehghannayeri/function-state:latest  # Replace with your Docker image name
          imagePullPolicy: IfNotPresent  # Use "IfNotPresent" if pulling from a registry
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
