deployment/function-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-deployment-service
  labels:
    app: function-deployment
spec:
  selector:
    app: function-deployment
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
