deployment/function-preparation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-preparation-service
  labels:
    app: function-preparation
spec:
  selector:
    app: function-preparation
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
