deployment/function-registration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-registration-service
  labels:
    app: function-registration
spec:
  selector:
    app: function-registration
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
