deployment/function-state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-state-service
  labels:
    app: function-state
spec:
  selector:
    app: function-state
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
