deployment/function-trigger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-trigger-service
  labels:
    app: function-trigger
spec:
  selector:
    app: function-trigger
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
