deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
spec:
  type: NodePort
  selector:
    app: nginx-reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Exposed on your node's floating IP
