deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubelesspy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubelesspy.local
      http:
        paths:
          - path: /function-registration
            pathType: Prefix
            backend:
              service:
                name: function-registration-service
                port:
                  number: 8000
          - path: /function-trigger
            pathType: Prefix
            backend:
              service:
                name: function-trigger-service
                port:
                  number: 8000
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: loki-service
                port:
                  number: 3100
